src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__duration_assignment_validation.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: diagnostics
---
warning[E067]: Implicit downcast from 'LREAL' to 'TIME'.
   ┌─ <internal>:29:15
   │
29 │     v_time := v_lreal; // valid
   │               ^^^^^^^ Implicit downcast from 'LREAL' to 'TIME'.

warning[E067]: Implicit downcast from 'REAL' to 'TIME'.
   ┌─ <internal>:30:15
   │
30 │     v_time := REAL#2.0; // valid
   │               ^^^^^^^^ Implicit downcast from 'REAL' to 'TIME'.

warning[E067]: Implicit downcast from 'LTIME' to 'TIME'.
   ┌─ <internal>:35:15
   │
35 │     v_time := v_ltime; // valid
   │               ^^^^^^^ Implicit downcast from 'LTIME' to 'TIME'.

warning[E067]: Implicit downcast from 'LTIME' to 'TIME'.
   ┌─ <internal>:36:15
   │
36 │     v_time := LTIME#10h20m30s; // valid
   │               ^^^^^^^^^^^^^^^ Implicit downcast from 'LTIME' to 'TIME'.

error[E037]: Invalid assignment: cannot assign 'STRING' to 'TIME'
   ┌─ <internal>:39:5
   │
39 │     v_time := v_string; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'TIME'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'TIME'
   ┌─ <internal>:40:5
   │
40 │     v_time := STRING#'string'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'TIME'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'TIME'
   ┌─ <internal>:41:5
   │
41 │     v_time := 'string'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'TIME'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'TIME'
   ┌─ <internal>:42:5
   │
42 │     v_time := v_char; // INVALID
   │     ^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'TIME'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'TIME'
   ┌─ <internal>:43:5
   │
43 │     v_time := CHAR#'c'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'TIME'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'TIME'
   ┌─ <internal>:47:5
   │
47 │     v_time := v_ptr_string^; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'TIME'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'TIME'
   ┌─ <internal>:49:5
   │
49 │     v_time := v_arr_string_3[0]; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'TIME'
